--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.141.5</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<!-- https://mvnrepository.com/artifact/org.testng/testng test-->
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
@@ -36,6 +36,3 @@
 	</dependency>
   </dependencies>
 </project>
-
-
-
