--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="DataObjects"/>
 	<classpathentry kind="src" path="Testcases"/>
 	<classpathentry kind="src" path="Executables"/>
-	<classpathentry kind="src" path="Text"/>
+	<classpathentry kind="src" path="TestSuite"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="module" value="true"/>
