--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Download/Selenium_JAVA_L1/jMailinator.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
