--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 	    <artifactId>maven-surefire-plugin</artifactId>
 	    <version>3.0.0-M1</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
+	<dependency>
+	    <groupId>com.google.api-client</groupId>
+	    <artifactId>google-api-client</artifactId>
+	    <version>1.27.0</version>
+	</dependency>
+	
 		
   </dependencies>
 </project>
