--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 	    <version>1.27.0</version>
 	</dependency>
 	
-		
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4.7</version>
+	</dependency>
+	
   </dependencies>
 </project>
