--- a/test-output/old/TestAll/Register.properties
+++ b/test-output/old/TestAll/Register.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Login][SuiteResult context=Register]
+[SuiteResult context=Login][SuiteResult context=Register][SuiteResult context=ChangePassword]
